server/static/sass/_base.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import 'variables';
@import 'compass/css3';
@import 'compass/utilities/general/clearfix';


/*****************************
 * Generic classes
 **************************/
.hide {
  display: none !important;
}

/* For modern browsers */
.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}
.clearfix:after {
  clear: both;
}
/* For IE 6/7 (trigger hasLayout) */
.clearfix {
  zoom: 1;
}

// This overrides Bootstrap's well class (it now looks raised instead of sunken)
.well {
  // TODO(david): These grays should not be hardcoded, or could be off-gray
  @include background(linear-gradient(top, #FCFCFC, #F9F9F9));
  // TODO(david): these colors should be darkened as much as the main text color
  //     was darkened (from http://opalang.org/)
  border-color: #DDDDDD #EAEAEA #DDDDDD #EAEAEA;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}

.select2-inline {
  line-height: 28px;
}

////////////////////////////////////////////////////////////////////////////////
// Overrides

// TODO(david): Do this in a better way
.select2-search .select2-input  {
  font-family: $baseFontFamily;
}

/****************************
 * Base page styles
 *************************/

// apply a natural box layout model to all elements
// See for more info http://paulirish.com/2012/box-sizing-border-box-ftw

// Uncomment to debug boxes
//* {
  //outline: 1px red solid;
//}

body {
  // TODO(mack): setup image dir to auto-use
  @include background(url(/static/img/background.png));
}

// TODO(mack): move landing page stuff into separate file

.container-fluid {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

footer {
  @include background(url(/static/img/footer_background_2000.jpg) center center no-repeat);
  // TODO(david): Figure out background-size: cover instead of height
  height: 545px;
  margin-top: 50px;
  #landing-footer-text {
    padding-top: 30px;
    text-align: center;
  }
}

